+ Temporarily using old TeamSelect page as reference for the layout + Created variable for text field sizes in TeamInfoTab + Added remaining layout for the third column in TeamInfoTab + Added new feature to Table UI component to allow adding spacing in between headers and cells + Updated OtherCardTable and StatTable to apply new spacing feature in Table component + Added justify-content to TeamInfoTab .container CSS class. + Fixed minor bug where LabeledTextArea is not properly resizing when changing the height property.

--- a/src/components/TeamPlayerSelect/(tabs)/(team-info-tabs)/TeamInfoTab.module.css
+++ b/src/components/TeamPlayerSelect/(tabs)/(team-info-tabs)/TeamInfoTab.module.css
@@ -1,6 +1,7 @@
 .container {
     display: inline-flex;
     flex-direction: row;
+    justify-content: space-around;
 }
 
 .column {
