--- a/src/pages/TeamSelect/TeamSelect.css
+++ b/src/pages/TeamSelect/TeamSelect.css
@@ -90,7 +90,7 @@
     display: inline-flex;
     width: 100%;
 
-    margin-top: 50px;
+    margin-top: 140px;
 
     align-items: flex-end;
     justify-content: flex-end;
